# nexus-harvester

./: .gitignore  =2.2.1  README.md  TODO.md  implementation.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
src/nexus_harvester/: __init__.py  main.py  models.py  settings.py
src/nexus_harvester/api/: __init__.py  dependencies.py  ingest.py  search.py
src/nexus_harvester/clients/: __init__.py  mem0.py  utils.py  zep.py
src/nexus_harvester/indexing/: __init__.py  indexing_service.py
src/nexus_harvester/mcp/: __init__.py  server.py  tools.py
src/nexus_harvester/middleware/: __init__.py  rate_limiting.py
src/nexus_harvester/processing/: document_processor.py
src/nexus_harvester/utils/: __init__.py  errors.py  logging.py  rate_limiting.py  rate_limiting_errors.py
tests/unit/api/: test_ingest_endpoints.py  test_processing_params.py  test_search_endpoints.py
tests/unit/indexing/: test_indexing_service.py
tests/unit/mcp/: test_mcp_tools.py
tests/unit/processing/: test_document_processor.py
tests/unit/utils/: test_error_handlers.py  test_errors_type_safety.py  test_rate_limiting.py
