[project]
name = "nexus-harvester"
version = "0.1.0"
description = "A high-performance knowledge harvesting and retrieval system for RAG applications"
authors = [
    {name = "Kenzo",email = "kenzo@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # Core dependencies with exact versions
    "fastapi (==0.115.12)",
    "pydantic (==2.11.4)",
    "pydantic-settings (==2.2.1)",
    "uvicorn (==0.34.2)",
    "orjson (==3.10.18)",
    "httpx (==0.28.1)",
    "python-dotenv (==1.1.0)",
    "typing-extensions (==4.13.2)",
    
    # Testing dependencies
    "pytest (==8.3.5)",
    "pytest-asyncio (==0.26.0)",
    "pytest-cov (==6.1.1)",
    "pytest-mock (==3.14.0)",
    
    # Logging
    "structlog (==23.1.0)",
    
    # MCP integration
    "fastmcp (==2.2.6)"
]

[project.optional-dependencies]
dev = [
    # Type checking
    "mypy (==1.8.0)",
    "pydantic-mypy (==0.0.1)",
    "types-orjson (==3.6.2)",
    "types-requests (==2.32.0)",
    
    # Linting
    "ruff (==0.3.2)",
    
    # Documentation
    "mkdocs (==1.5.3)",
    "mkdocs-material (==9.5.9)",
    
    # Dependency management
    "pip-audit (==2.7.2)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
